final updates before live to be shared in review meeting 01-05-2025

--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,9 @@ body{
 .disclaimer{
     font-size: 0.6rem;
 }
+.teamImg{
+    height: 350px !important;
+}
 /*** Navbar ***/
 .navbar .dropdown-toggle::after {
     border: none;
