splitting of modules basics of land survey and CORS is done with resize of banner images in index page and some typo errors cleared for basics of GIS

--- a/css/style.css
+++ b/css/style.css
@@ -497,6 +497,8 @@ body{
 }
 .page-header-landSurvey{
     background-image: url("../img/carousel-2.jpg");    
+}.page-header-corsUrbanSurvey{
+    background-image: url("../img/cors_UrbanSurvey.png");    
 }
 .page-header-NAKSHA{
     background-image: url("../CoursesContent/res/img/NAKSHA/page_1_img_1.png");    
